--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,15 @@
     "background": {
       "service_worker": "background.js"
     },
-    "permissions": ["tabs"],
-    "host_permissions": ["http://medium.com/*", "https://medium.com/*"]
+    "permissions": ["tabs","notifications"],
+    "host_permissions": ["http://medium.com/*", "https://medium.com/*"],
+    "commands": {
+    "open-freedium": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+F"
+      },
+      "description": "Open current tab in Freedium"
+    }
+  }
   }
   
